# ncnn4e

./: CMakeLists.txt  README.md  ncnn4e.sln  ncnn4e编译脚本.bat
demo/: canny.e  face.e  matchTemplate.e  ocr.e  pHash.e  pose.e  sort.e  tuse_failed.e  yolov4.e  yolov5.e  yolov7.e
include/: blazeface.h  nanodet.h  pch.h  yolov7.h
ncnn4e/: blazeface.cpp  dllmain.cpp  feature.cpp  match.cpp  ncnn4e.cpp  ncnn4e.vcxproj  ncnn4e.vcxproj.filters  paddleocr.cpp  pch.cpp  pch.h  pose.cpp  sort.cpp  yolov4.cpp  yolov5.cpp  yolov7.cpp  yolov7.h
ncnn4e demo for e/: Main.bak  ch_PP-OCRv3_det.param  ocr.e  yolov7.e
src/: clipper.cpp  face.cpp  nanodet.cpp  paddleocr.cpp  pose.cpp  yolov4.cpp  yolov7.cpp
